objects/Invoice__c/fields/Service_Tax_rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_rate__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>Service Tax rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>