objects/Invoice__c/fields/Service_Total_after_tax__c.field-meta.xml
<CustomField>
    <fullName>Service_Total_after_tax__c</fullName>
    <formula>Sub_Total_service__c  * (1- Service_Tax_rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Total after tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>