objects/Invoice__c/fields/Sub_Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Expenses__c</fullName>
    <label>Sub Total (Expenses)</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>