objects/Invoice__c/fields/Sub_Total_mileage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_mileage__c</fullName>
    <description>Sub total for mileage in expense invoice</description>
    <label>Sub_Total (mileage)</label>
    <summarizedField>Invoice_Line_Item__c.Amount_mileage__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>