objects/Invoice__c/fields/Sub_Total_service__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_service__c</fullName>
    <label>Sub_Total (service)</label>
    <summarizedField>Invoice_Line_Item__c.A__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>