objects/Invoice__c/fields/Total_After_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_After_VAT__c</fullName>
    <formula>Sub_Total_Expenses__c  +  Sub_Total_mileage__c  +  Sub_Total_service__c  +  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total After VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>