objects/Invoice__c/fields/VAT_rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_rate__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>VAT rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>