objects/Invoice__c/recordTypes/Expense_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Expense_Invoice</fullName>
    <active>true</active>
    <label>Expense Invoice</label>
</RecordType>