objects/Invoice__c/validationRules/rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>rule_1</fullName>
    <active>true</active>
    <errorConditionFormula>Paid_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Paid Date cannot be in the future</errorMessage>
</ValidationRule>