objects/Invoice__c/validationRules/rule_2.validationRule-meta.xml
<ValidationRule>
    <fullName>rule_2</fullName>
    <active>true</active>
    <errorConditionFormula>Submitted_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Submitted Date cannot be in the future</errorMessage>
</ValidationRule>