objects/Invoice__c/validationRules/rule_3.validationRule-meta.xml
<ValidationRule>
    <fullName>rule_3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Submitted_Date__c ),(ISPICKVAL(Status__c, &quot;Submitted&quot;)))</errorConditionFormula>
    <errorMessage>The instructor should not be able to change the status to submitted unless they have provided a submitted date</errorMessage>
</ValidationRule>