objects/Invoice__c/validationRules/rule_4.validationRule-meta.xml
<ValidationRule>
    <fullName>rule_4</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Paid_Date__c),(ISPICKVAL(Status__c, &quot;Paid&quot;)))</errorConditionFormula>
    <errorMessage>Instructor should not be able to change status to paid unless paid date is provided</errorMessage>
</ValidationRule>